--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -13,9 +13,51 @@ input[type=text]::-webkit-outer-spin-button {
     
 }
 
+.search-text{
+    width: 20vw;
+    height: 5vh;
+    text-align: center;
+    margin-bottom: 1vh;
+    font-size: large;
+}
+
+.search-btn{
+    display: block;
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 0;
+    width: 10vw;
+    height: 3vw;
+}
+
 input {
     font: 200 12px/1.5 Georgia, Times New Roman, serif;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
+}
+
+
+@media(max-width: 411px) {
+    .search-text{
+        width: 100vw;
+        height: 5vh;
+        text-align: center;
+        margin-bottom: 1vh;
+    }
+
+    .search-btn{
+        display: block;
+        position: relative;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        margin: auto;
+        margin-bottom: 0;
+        width: 50vw;
+        height: 10vw;
+    }
 }
