made the results appear horizontally on desktop, vertically on mobile

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,3 +1,35 @@
+@media(max-width: 411px) {
+.list-div {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: center;
+}
+
+.list-ul {
+  list-style-type: none;
+  width: 100%;
+}
+ 
+.list-li .list-p {
+  font: 200 12px/1.5 Georgia, Times New Roman, serif;
+}
+ 
+.list-li {
+  padding: 5px;
+  overflow: auto;
+  display: inline;
+}
+ 
+.list-li:hover {
+  background: #eee;
+  cursor: pointer;
+}
+}
+
+@media(min-width: 900px) {
 .list-div {
     position: relative;
     align-items: center;
@@ -14,7 +46,8 @@
 
 .list-ul {
   list-style-type: none;
-  width: 300px;
+  width: 100%;
+  overflow-x: scroll;
 }
  
 .list-li .list-p {
@@ -22,6 +55,7 @@
 }
  
 .list-li {
+  display: inline-block;
   padding: 5px;
   overflow: auto;
 }
@@ -30,11 +64,4 @@
   background: #eee;
   cursor: pointer;
 }
-
-/* @media(max-width: 411px) {
-    .list-div {
-    position: relative;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-} */
+}
